css/style.css
body {
  overflow-x: hidden;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: Poppins;
}

h2 {
  font-size: 28px;
}

p {
  font-family: Roboto;
}

.navbar {
  background: white;
  border: 0;
  font-family: Poppins;
}

.navbar-brand {
  font-size: 30px;
  color: black !important;
  font-weight: bold;
}

h1 {
  font-size: 30px;
  margin-bottom: 5px;
}

#showcase img {
  padding: 30px;
  width: 80%;
  height: 80%;
}

.icons {
  text-align: center;
  color: black;
}

.icons i {
  margin: 5px;
  color: black;
}

#testimonial {
  background: #f1f1f1;
  padding: 20px 0 20px 0;
  text-align: center;
  margin: 15px 0 0px 0;
}

#testimonial p {
  font-size: 20px;
  font-family: "Josefin Sans";
  color: black;
}

.carousel-item img {
  opacity: 0.3;
  height: 500px;
}

.carousel-item {
  background-color: rgba(0, 0, 0);
}

.carousel-caption {
  margin-bottom: 150px;
  padding: 10px;
  border: 1px solid white;
}

.card img {
  width: 300px;
  height: 200px;
}

#experience img {
  width: 300px;
  height: 200px;
}

.skill-item {
  padding: 5px;
}
.container {
  padding: 16px 16px 0px 16px;
}

#footer {
  background: white;
  color: black;
}

/* Media Queries */
/*xs*/
@media (max-width: 575px) {
  .navbar-brand {
    font-size: 28px;
    color: black !important;
    font-weight: bold;
  }
  h2 {
    font-size: 28px;
  }
  #testimonial p,
  #showcase h5 {
    font-size: 15px;
  }
  #showcase img {
    width: 250px;
    height: 250px;
  }
  .card {
    margin: 0px 20px 20px 20px;
  }

  #projects img {
    height: 400px;
  }

  .carousel-caption {
    margin-bottom: 100px;
    padding: 10px;
    border: 1px solid white;
  }

  #experience .row {
    margin: 0px 5px 0px 5px;
  }

  #education .row {
    margin: 0px 10px 0px 10px;
  }

  #skills .row {
    margin: 0px 50px 0px 50px;
  }

  #languages .row {
    margin: 0px 50px 0px 50px;
  }
}

/* sm */
@media (min-width: 576px) and (max-width: 767px) {
  .navbar-brand {
    font-size: 28px;
    color: black !important;
    font-weight: bold;
  }
  #showcase img {
    padding: 0px;
    width: 80%;
    height: 80%;
  }
  h1 {
    font-size: 28px;
  }
  h2 {
    font-size: 20px;
  }
  #testimonial p,
  #showcase h5 {
    font-size: 15px;
  }
  .card {
    margin: 0px 20px 20px 20px;
  }
}

/* md */
@media (min-width: 768px) and (max-width: 991px) {
  #showcase img {
    padding: 10px;
    width: 80%;
    height: 80%;
  }
}

